--- a/myApp/package.json
+++ b/myApp/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "watch": "nodemon --ignore public"
   },
   "dependencies": {
+    "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "livereload": "^0.9.3",
+    "morgan": "~1.9.1",
+    "nodemon": "^3.1.7"
   }
 }
